# figures

./: CMakeLists.txt  README.md  canvas.cpp  canvas.h  color.h  figures.cpp  figures.h  main.cpp  vect2d.cpp  vect2d.h
